--- a/blank/myapplication/build.gradle
+++ b/blank/myapplication/build.gradle
@@ -33,7 +33,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.applandeo:material-calendar-view:1.5.0'
+    /*compile 'com.applandeo:material-calendar-view:1.5.0'*/
+    implementation 'ru.cleverpumpkin:crunchycalendar:1.1.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
